add speaker: anton bely

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -379,6 +379,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/anton-bely.jpg" alt="Anton Bely photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/anton-bely.html">Anton Bely</a></h3>
+              <p>
+                <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
