add speaker: ekaterina prigara

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -265,6 +265,19 @@
 
         <li>
           <figure>
+            <img src="images/speakers/ekaterina_prigara.jpg" alt="Ekaterina Prigara photo">
+            <figcaption>
+              <span class="speaker-company">JetBrains</span>
+              <h3><a href="speakers/ekaterina-prigara.html">Ekaterina Prigara</a></h3>
+              <p>
+                <small>Munich, Germany</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
               <span class="speaker-company">Uber</span>
