--- a/app/partners.html
+++ b/app/partners.html
@@ -200,6 +200,11 @@
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
+          <a target="_blank" href="https://vk.com/jsmachine">
+            <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://twitter.com/_jskitchen">
             <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
           </a>
