add speaker: Muhammed Saluh Guler

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -265,7 +265,7 @@
 
         <li>
           <figure>
-            <img src="images/speakers/ekaterina_prigara.jpg" alt="Ekaterina Prigara photo">
+            <img src="images/speakers/ekaterina-prigara.jpg" alt="Ekaterina Prigara photo">
             <figcaption>
               <span class="speaker-company">JetBrains</span>
               <h3><a href="speakers/ekaterina-prigara.html">Ekaterina Prigara</a></h3>
@@ -401,6 +401,19 @@
               <h3><a href="speakers/anton-bely.html">Anton Bely</a></h3>
               <p>
                 <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/muhammed-salih-guler.jpg" alt="Muhammed Salih Guler photo">
+            <figcaption>
+              <span class="speaker-company">Onefootball GmbH</span>
+              <h3><a href="speakers/muhammed-salih-guler.html">Muhammed Salih Guler</a></h3>
+              <p>
+                <small> Berlin, Germany</small>
               </p>
             </figcaption>
           </figure>
