add speaker: aleksandr denisov

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -397,7 +397,7 @@
           <figure>
             <img src="images/speakers/anton-bely.jpg" alt="Anton Bely photo">
             <figcaption>
-              <span class="speaker-company">EPAM</span>
+              <span class="speaker-company">Yandex</span>
               <h3><a href="speakers/anton-bely.html">Anton Bely</a></h3>
               <p>
                 <small> Minsk, Belarus</small>
@@ -414,6 +414,19 @@
               <h3><a href="speakers/muhammed-salih-guler.html">Muhammed Salih Guler</a></h3>
               <p>
                 <small> Berlin, Germany</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/aleksandr-denisov.jpg" alt="Aleksandr Denisov photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/aleksandr-denisov.html">Aleksandr Denisov</a></h3>
+              <p>
+                <small>Nizhny Novgorod, Russia</small>
               </p>
             </figcaption>
           </figure>
@@ -458,6 +471,9 @@
   </section>
 </div>
 <footer><p>The Rolling Scopes 2019</p></footer>
+
+
+
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
