fix: js kitchen link

--- a/app/partners.html
+++ b/app/partners.html
@@ -205,7 +205,7 @@
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://twitter.com/_jskitchen">
+          <a target="_blank" href="https://t.me/js_kitchen">
             <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
           </a>
         </li>
