add speaker: elaine dias batista, upd: talk of ekaterina prigara

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -421,6 +421,19 @@
 
         <li>
           <figure>
+            <img src="images/speakers/elaine-dias-batista.jpg" alt="Elaine Dias Batista photo">
+            <figcaption>
+              <span class="speaker-company">SFEIR</span>
+              <h3><a href="speakers/elaine-dias-batista.html">Elaine Dias Batista</a></h3>
+              <p>
+                <small>Paris, France</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/aleksandr-denisov.jpg" alt="Aleksandr Denisov photo">
             <figcaption>
               <span class="speaker-company">EPAM</span>
@@ -431,6 +444,9 @@
             </figcaption>
           </figure>
         </li>
+
+
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
