add speaker: vojtech miksu

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -434,6 +434,19 @@
 
         <li>
           <figure>
+            <img src="images/speakers/vojtech-miksu.jpg" alt="Vojtech Miksu photo">
+            <figcaption>
+              <span class="speaker-company">Uber</span>
+              <h3><a href="speakers/vojtech-miksu.html">Vojtech Miksu</a></h3>
+              <p>
+                <small>San Francisco, United States</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/aleksandr-denisov.jpg" alt="Aleksandr Denisov photo">
             <figcaption>
               <span class="speaker-company">EPAM</span>
@@ -444,6 +457,7 @@
             </figcaption>
           </figure>
         </li>
+
 
 
 
