add speaker: Richard Westenra

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -445,6 +445,20 @@
           </figure>
         </li>
 
+
+        <li>
+          <figure>
+            <img src="images/speakers/richard-westenra.jpg" alt="Richard Westenra photo">
+            <figcaption>
+              <span class="speaker-company">QuantumBlack</span>
+              <h3><a href="speakers/richard-westenra.html">Richard Westenra</a></h3>
+              <p>
+                <small>London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
         <li>
           <figure>
             <img src="images/speakers/aleksandr-denisov.jpg" alt="Aleksandr Denisov photo">
