add speaker: Milica Mihajlija

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -472,7 +472,18 @@
           </figure>
         </li>
 
-
+        <li>
+          <figure>
+            <img src="images/speakers/milica-mihajlija.jpg" alt="Milica Mihajlija photo">
+            <figcaption>
+              <span class="speaker-company">Mozilla</span>
+              <h3><a href="speakers/milica-mihajlija.html">Milica Mihajlija</a></h3>
+              <p>
+                <small>Belgrade, Serbia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
 
 
       </ul>
