add mozilla to travel partners

--- a/app/index.html
+++ b/app/index.html
@@ -473,6 +473,11 @@
             <img src="images/partners/logo-netlify.svg" alt="netlify logo">
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.mozilla.org">
+            <img src="images/partners/logo-mozilla.svg" alt="mozilla logo">
+          </a>
+        </li>
       </ul>
 
       <h2>Info Partners</h2>
