add speaker: Paul Yuhnovich

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -485,7 +485,18 @@
           </figure>
         </li>
 
-
+        <li>
+          <figure>
+            <img src="images/speakers/paul-yuhnovich.jpg" alt="Paul Yuhnovich photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/paul-yuhnovich.html">Paul Yuhnovich</a></h3>
+              <p>
+                <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
@@ -526,8 +537,6 @@
   </section>
 </div>
 <footer><p>The Rolling Scopes 2019</p></footer>
-
-
 
 
 <!-- build:js scripts/vendor.js -->
