fix: Milica Mihajlija's company

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -476,7 +476,7 @@
           <figure>
             <img src="images/speakers/milica-mihajlija.jpg" alt="Milica Mihajlija photo">
             <figcaption>
-              <span class="speaker-company">Mozilla</span>
+              <span class="speaker-company">Mozilla TechSpeaker</span>
               <h3><a href="speakers/milica-mihajlija.html">Milica Mihajlija</a></h3>
               <p>
                 <small>Belgrade, Serbia</small>
