fix: About page content

--- a/app/about.html
+++ b/app/about.html
@@ -162,7 +162,7 @@
         full three days of
         discussions about JavaScript, Front-end, Frameworks, Mobile, Smart TV, Node.JS and etc.
       </p>
-      <p class="text-md">Previous ones were too good to do it again. Let’s Roll!</p>
+      <p class="text-md">Let’s Roll!</p>
     </div>
   </section>
   <section class="shorted">
