add speaker: Anastasiia Voitova

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -497,6 +497,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/anastasiia-voitova.jpg" alt="Anastasiia Voitova photo">
+            <figcaption>
+              <span class="speaker-company">Cossack Labs</span>
+              <h3><a href="speakers/anastasiia-voitova.html">Anastasiia Voitova</a></h3>
+              <p>
+                <small>Kyiv, Ukraine</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
