add speaker: Vladimir Ivanov

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -510,6 +510,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/vladimir-ivanov.jpg" alt="Vladimir Ivanov photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/vladimir-ivanov.html">Vladimir Ivanov</a></h3>
+              <p>
+                <small>Saint-Petersburg, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
