add speakers: Friedman, Kenzhaev; upd: Miksu's intro

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -161,38 +161,12 @@
 
         <li>
           <figure>
-            <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
+            <img src="images/speakers/vitaly-friedman.jpg" alt="Vitaly Friedman photo">
             <figcaption>
-              <span class="speaker-company">Self-employed</span>
-              <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
+              <span class="speaker-company">Smashing Magazine</span>
+              <h3><a href="speakers/vitaly-friedman.html">Vitaly Friedman</a></h3>
               <p>
-                <small>Minsk, Belarus</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
-            <figcaption>
-              <span class="speaker-company">Emerline</span>
-              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
-              <p>
-                <small>Minsk, Belarus</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
-            <figcaption>
-              <span class="speaker-company">Google</span>
-              <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p>
-                <small>Los Angeles, United States</small>
+                <small>Freiburg, Germany</small>
               </p>
             </figcaption>
           </figure>
@@ -297,6 +271,45 @@
               <h3><a href="speakers/shawn-wang.html">Shawn Wang</a></h3>
               <p>
                 <small>New York, United States</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
+            <figcaption>
+              <span class="speaker-company">Self-employed</span>
+              <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
+            <figcaption>
+              <span class="speaker-company">Emerline</span>
+              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
+            <figcaption>
+              <span class="speaker-company">Google</span>
+              <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
+              <p>
+                <small>Los Angeles, United States</small>
               </p>
             </figcaption>
           </figure>
@@ -519,6 +532,19 @@
               <h3><a href="speakers/vladimir-ivanov.html">Vladimir Ivanov</a></h3>
               <p>
                 <small>Saint-Petersburg, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/artur-kenzhaev.jpg" alt="Artur Kenzhaev photo">
+            <figcaption>
+              <span class="speaker-company">Yandex.Market</span>
+              <h3><a href="speakers/artur-kenzhaev.html">Artur Kenzhaev</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
               </p>
             </figcaption>
           </figure>
