add speaker: Scott Feinberg

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -549,6 +549,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/scott-feinberg.jpg" alt="Scott Feinberg photo">
+            <figcaption>
+              <span class="speaker-company">Google</span>
+              <h3><a href="speakers/scott-feinberg.html">Scott Feinberg</a></h3>
+              <p>
+                <small>New York, United States</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
