upd: rs logo, add: mobile people logo

--- a/app/index.html
+++ b/app/index.html
@@ -440,6 +440,10 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://communities.by/events/mobile-people-community"><img
+            src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/></a>
+        </li>
+        <li>
           <a target="_blank" href="http://imaguru.co">
             <img src="images/partners/logo-imaguru.svg" alt="imaguru logo"/></a>
         </li>
