--- a/app/mobile.html
+++ b/app/mobile.html
@@ -266,6 +266,89 @@
     </div>
   </section>
 
+  <section>
+    <div class="content-lg">
+
+      <h2>Organizers</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="http://www.rollingscopes.com/">
+            <img src="images/partners/logo-rs.svg" alt="rollingscopes logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://communities.by/events/mobile-people-community"><img
+            src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/></a>
+        </li>
+        <li>
+          <a target="_blank" href="http://imaguru.co">
+            <img src="images/partners/logo-imaguru.svg" alt="imaguru logo"/></a>
+        </li>
+      </ul>
+
+      <h2>Travel Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank"
+             href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
+            <img src="images/partners/logo-bluetooth.png" alt="bluetooth logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.google.com/">
+            <img src="images/partners/logo-google.svg" alt="google logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.keepsolid.com/">
+            <img src="images/partners/logo-keepsolid.svg" alt="keep solid logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.yandex.com/">
+            <img src="images/partners/logo-yandex.svg" alt="yandex logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.netlify.com">
+            <img src="images/partners/logo-netlify.svg" alt="netlify logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.mozilla.org">
+            <img src="images/partners/logo-mozilla.svg" alt="mozilla logo">
+          </a>
+        </li>
+      </ul>
+      <h2>Info Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://vk.com/jsmachine">
+            <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/js_kitchen">
+            <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
+          </a>
+        </li>
+      </ul>
+
+      <p>
+        <a class="btn" href="become-a-partner.html">Become a Partner</a>
+      </p>
+
+    </div>
+    <div class="content-md padding-top-md">
+      <p class="text-lg">We would be happy to discuss any kind
+        of partnership and gladly accept any help.</p>
+
+      <p class="content-sm">Please contact us about information and media partnership by writing an email to <a
+        href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a></p>
+    </div>
+  </section>
+
+
 
   <section>
     <div class="content-md">
