add speaker: Ioana Chiorean

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -550,6 +550,20 @@
           </figure>
         </li>
 
+
+        <li>
+          <figure>
+            <img src="images/speakers/ioana-chiorean.jpg" alt="Ioana Chiorean photo">
+            <figcaption>
+              <span class="speaker-company">Cognizant Softvision / Mozilla</span>
+              <h3><a href="speakers/ioana-chiorean.html">Ioana Chiorean</a></h3>
+              <p>
+                <small>Cluj Napoca, Romania</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
         <li>
           <figure>
             <img src="images/speakers/scott-feinberg.jpg" alt="Scott Feinberg photo">
