add speaker: Artem Kunets

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -550,7 +550,6 @@
           </figure>
         </li>
 
-
         <li>
           <figure>
             <img src="images/speakers/ioana-chiorean.jpg" alt="Ioana Chiorean photo">
@@ -576,6 +575,21 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/artem-kunets.jpg" alt="Artem Kunets photo">
+            <figcaption>
+              <span class="speaker-company">Align Technology</span>
+              <h3><a href="speakers/artem-kunets.html">Artem Kunets</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
