add travel partners: uber, align, quantumblack

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -165,8 +165,6 @@
   </section>
 
 
-
-
   <section>
     <div class="content-lg">
       <h2>Speakers</h2>
@@ -310,8 +308,23 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.aligntech.com/">
+            <img src="images/partners/logo-align.png" alt="align technology logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.quantumblack.com/">
+            <img src="images/partners/logo-quantumblack.png" alt="quantumblack logo">
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://www.netlify.com">
             <img src="images/partners/logo-netlify.svg" alt="netlify logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.uber.com">
+            <img src="images/partners/logo-uber.png" alt="uber logo">
           </a>
         </li>
         <li>
@@ -347,7 +360,6 @@
         href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a></p>
     </div>
   </section>
-
 
 
   <section>
