--- a/app/index.html
+++ b/app/index.html
@@ -473,8 +473,23 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.aligntech.com/">
+            <img src="images/partners/logo-align.png" alt="align technology logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.quantumblack.com/">
+            <img src="images/partners/logo-quantumblack.png" alt="quantumblack logo">
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://www.netlify.com">
             <img src="images/partners/logo-netlify.svg" alt="netlify logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.uber.com">
+            <img src="images/partners/logo-uber.png" alt="uber logo">
           </a>
         </li>
         <li>
