--- a/app/partners.html
+++ b/app/partners.html
@@ -196,8 +196,23 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.aligntech.com/">
+            <img src="images/partners/logo-align.png" alt="align technology logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.quantumblack.com/">
+            <img src="images/partners/logo-quantumblack.png" alt="quantumblack logo">
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://www.netlify.com">
             <img src="images/partners/logo-netlify.svg" alt="netlify logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.uber.com">
+            <img src="images/partners/logo-uber.png" alt="uber logo">
           </a>
         </li>
         <li>
@@ -206,6 +221,7 @@
           </a>
         </li>
       </ul>
+
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
