add partnership doc

--- a/app/index.html
+++ b/app/index.html
@@ -155,21 +155,20 @@
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
-        <a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy
-          Tickets</a>
-
         <a class="btn" target="_blank"
            href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
           for Speakers</a>
         <!--<a class="btn" href="schedule.html">See Schedule</a>-->
+        <a target="_blank" class="btn" href="data/rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
       <p class="text-md padding-top-md">The biggest conference in Belarus focusing on developing and designing Web,
         JavaScript,
         Node.JS, Mobile, Smart TV, VR/AR applications. Backed by <a href="https://rollingscopes.com/">The
           Rolling
           Scopes</a> developer community since 2015.</p>
+      <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+        Ticket</a></p>
     </div>
-
   </section>
   <section data-color="#BB94FF">
     <div class="content-lg">
@@ -514,7 +513,7 @@
       </ul>
 
       <p>
-        <a class="btn" href="become-a-partner.html">Become a Partner</a>
+        <a target="_blank" class="btn" href="data/rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
     </div>
 
