upd partnership doc path

--- a/app/partners.html
+++ b/app/partners.html
@@ -237,7 +237,7 @@
       </ul>
 
       <p>
-        <a target="_blank" class="btn" href="data/rsconf19_PARTNERSHIP.pdf">Become a partner</a>
+        <a target="_blank" class="btn" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
 
     </div>
