--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@
            href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
           for Speakers</a>
         <!--<a class="btn" href="schedule.html">See Schedule</a>-->
-        <a target="_blank" class="btn" href="data/rsconf19_PARTNERSHIP.pdf">Become a partner</a>
+        <a target="_blank" class="btn" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
       <p class="text-md padding-top-md">The biggest conference in Belarus focusing on developing and designing Web,
         JavaScript,
@@ -513,7 +513,7 @@
       </ul>
 
       <p>
-        <a target="_blank" class="btn" href="data/rsconf19_PARTNERSHIP.pdf">Become a partner</a>
+        <a target="_blank" class="btn" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
     </div>
 
