change emerline to leverx

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -293,7 +293,7 @@
           <figure>
             <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
             <figcaption>
-              <span class="speaker-company">Emerline</span>
+              <span class="speaker-company">LeverX Group</span>
               <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
               <p>
                 <small>Minsk, Belarus</small>
