add speaker: blinov

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -589,6 +589,18 @@
           </figure>
         </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-blinov.jpg" alt="Alexander Blinov photo">
+            <figcaption>
+              <span class="speaker-company">Headhunter</span>
+              <h3><a href="speakers/alexander-blinov.html">Alexander Blinov</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
 
       </ul>
 
