add speaker: Pavel Strelchenko

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -231,6 +231,31 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-blinov.jpg" alt="Alexander Blinov photo">
+            <figcaption>
+              <span class="speaker-company">Headhunter</span>
+              <h3><a href="speakers/alexander-blinov.html">Alexander Blinov</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/pavel-strelchenko.jpg" alt="Pavel Strelchenko photo">
+            <figcaption>
+              <span class="speaker-company">Headhunter</span>
+              <h3><a href="speakers/pavel-strelchenko.html">Pavel Strelchenko</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
 
