--- a/app/speakers.html
+++ b/app/speakers.html
@@ -602,6 +602,19 @@
           </figure>
         </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/pavel-strelchenko.jpg" alt="Pavel Strelchenko photo">
+            <figcaption>
+              <span class="speaker-company">Headhunter</span>
+              <h3><a href="speakers/pavel-strelchenko.html">Pavel Strelchenko</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
