add speaker: Vladik Khononov

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -615,6 +615,19 @@
           </figure>
         </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/vladik-khononov.jpg" alt="Vladik Khononov photo">
+            <figcaption>
+              <span class="speaker-company">Invesus Group</span>
+              <h3><a href="speakers/vladik-khononov.html">Vladik Khononov</a></h3>
+              <p>
+                <small>Nazareth Iliit, Israel</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
