--- a/app/index.html
+++ b/app/index.html
@@ -155,10 +155,10 @@
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
-        <a class="btn" target="_blank"
-           href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
-          for Speakers</a>
-        <!--<a class="btn" href="schedule.html">See Schedule</a>-->
+<!--        <a class="btn" target="_blank"-->
+<!--           href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call-->
+<!--          for Speakers</a>-->
+        <a class="btn" href="schedule.html">See Schedule</a>
         <a target="_blank" class="btn" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
       <p class="text-md padding-top-md">The biggest conference in Belarus focusing on developing and designing Web,
