add: speaker's companies, add mobile day

--- a/app/index.html
+++ b/app/index.html
@@ -311,7 +311,7 @@
           <figure>
             <img src="images/speakers/madlaina-kalunder.jpg" alt="Madlaina Kalunder photo">
             <figcaption>
-              <span class="speaker-company">FHNW.ch</span>
+              <span class="speaker-company">FHNW University</span>
               <h3><a href="speakers/madlaina-kalunder.html">Madlaina Kalunder</a></h3>
               <p>
                 <small>Zurich, Switzerland</small>
