--- a/app/mobile.html
+++ b/app/mobile.html
@@ -256,6 +256,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/yonatan-levin.jpg" alt="Yonatan Levin photo">
+            <figcaption>
+              <span class="speaker-company">monday.com</span>
+              <h3><a href="speakers/yonatan-levin.html">Yonatan Levin</a></h3>
+              <p>
+                <small>Tel Aviv, Israel</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
