--- a/app/speakers.html
+++ b/app/speakers.html
@@ -176,7 +176,7 @@
           <figure>
             <img src="images/speakers/madlaina-kalunder.jpg" alt="Madlaina Kalunder photo">
             <figcaption>
-              <span class="speaker-company">FHNW.ch</span>
+              <span class="speaker-company">FHNW University</span>
               <h3><a href="speakers/madlaina-kalunder.html">Madlaina Kalunder</a></h3>
               <p>
                 <small>Zurich, Switzerland</small>
@@ -623,6 +623,19 @@
               <h3><a href="speakers/vladik-khononov.html">Vladik Khononov</a></h3>
               <p>
                 <small>Nazareth Iliit, Israel</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/yonatan-levin.jpg" alt="Yonatan Levin photo">
+            <figcaption>
+              <span class="speaker-company">monday.com</span>
+              <h3><a href="speakers/yonatan-levin.html">Yonatan Levin</a></h3>
+              <p>
+                <small>Tel Aviv, Israel</small>
               </p>
             </figcaption>
           </figure>
