upd: stage color for mobile

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -176,7 +176,7 @@
           <h3><span class="schedule-time">10:00</span> Opening. Welcome speech</h3>
           <p class="text-sm">"Mobile People" Crew</p>
           <p class="text-sm">10min | RU
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
 
@@ -187,7 +187,7 @@
             <small>| EPAM</small>
           </p>
           <p class="text-sm">40min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
 
@@ -199,7 +199,7 @@
             <small>| Onefootball GmbH</small>
           </p>
           <p class="text-sm">50min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
         <li class="second-stream">
@@ -220,7 +220,7 @@
             <small>| EPAM</small>
           </p>
           <p class="text-sm">50min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
         <li class="second-stream">
@@ -245,7 +245,7 @@
             <small>| Cossack Labs</small>
           </p>
           <p class="text-sm">50min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
         <li class="second-stream">
@@ -261,12 +261,12 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">15:00</span><a href="#"> TBD</a></h3>
+          <h3><span class="schedule-time">15:00</span> TBD</h3>
           <p class="text-sm">Данис Тазединов
             <small>| EPAM</small>
           </p>
           <p class="text-sm">50min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
         <li class="second-stream">
@@ -723,7 +723,7 @@
             <small>| Smashing Magazine</small>
           </p>
           <p class="text-sm">60min | EN
-            <span class="talk-place">Red Stage</span>
+            <span class="talk-place">Blue Stage</span>
           </p>
         </li>
       </ul>
