add ticket section on schedule page

--- a/app/index.html
+++ b/app/index.html
@@ -213,7 +213,7 @@
           <img src="images/tickets/mobile_ticket.jpg" alt="">
           <div class="ticket-card-body">
             <p>1 day, 2 streams</p>
-            <h3>"Mobile Friday" Ticket</h3>
+            <h3>"Mobile People Day" Ticket</h3>
             <p>
               Access to mobile streams, mastered by the MobilePeople community.
             </p>
