upd: hashtag for mobile people day

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -156,7 +156,7 @@
     <div class="content-lg">
       <h2 class="text-lg">Schedule</h2>
       <p class="schedule-tabs">
-        <a data-day="mobile-people-friday" href="#mobile-people-friday" class="btn first-day-btn rounded"><span
+        <a data-day="mobile-people-day" href="#mobile-people-day" class="btn first-day-btn rounded"><span
           class="full-view">Mobile People Day</span>
           <span class="abbr-view">9 Aug</span></a>
         <!--        <a data-day="design-friday" href="#design-friday" class="btn first-day-btn rounded"><span class="full-view">Design Friday</span>-->
@@ -168,7 +168,7 @@
             class="abbr-view">11 Aug</span></a>
       </p>
 
-      <ul class="schedule mobile-people-friday">
+      <ul class="schedule mobile-people-day">
         <li>
           <h3><span class="schedule-time">9:00</span> Registration</h3>
         </li>
