upd: mobile day stages

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -176,7 +176,7 @@
           <h3><span class="schedule-time">10:00</span> Opening. Welcome speech</h3>
           <p class="text-sm">"Mobile People" Crew</p>
           <p class="text-sm">10min | RU
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Green Stage</span>
           </p>
         </li>
 
@@ -187,11 +187,20 @@
             <small>| EPAM</small>
           </p>
           <p class="text-sm">40min | EN
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Green Stage</span>
           </p>
         </li>
 
         <li class="first-stream">
+          <h3><span class="schedule-time">11:00</span><a href="speakers/yonatan-levin.html">TBD</a></h3>
+          <p class="text-sm">Yonatan Levin
+            <small>| monday.com</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
           <h3><span class="schedule-time">11:00</span><a href="speakers/muhammed-salih-guler.html">Animations in
             Flutter</a>
           </h3>
@@ -202,17 +211,19 @@
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-        <li class="second-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/yonatan-levin.html">TBD</a></h3>
-          <p class="text-sm">Yonatan Levin
-            <small>| Android Academy</small>
+
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Я хочу быть
+            архитектором. Работать сутки через трое.</a></h3>
+          <p class="text-sm">Alexander Blinov
+            <small>| Headhunter</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">50min | RU
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
-
-        <li class="first-stream">
+        <li class="second-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/aleksandr-denisov.html">How to cook Flutter
             correctly</a>
           </h3>
@@ -223,32 +234,12 @@
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-        <li class="second-stream">
-          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Я хочу быть
-            архитектором. Работать сутки через трое.</a></h3>
-          <p class="text-sm">Alexander Blinov
-            <small>| Headhunter</small>
-          </p>
-          <p class="text-sm">50min | RU
-            <span class="talk-place">Green Stage</span>
-          </p>
-        </li>
 
         <li>
           <h3><span class="schedule-time">13:00</span> Lunch break | 60min</h3>
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">14:00</span><a href="speakers/anastasiia-voitova.html"> 10 lines of
-            encryption, 1500 lines of key management</a></h3>
-          <p class="text-sm">Anastasiia Voitova
-            <small>| Cossack Labs</small>
-          </p>
-          <p class="text-sm">50min | EN
-            <span class="talk-place">Blue Stage</span>
-          </p>
-        </li>
-        <li class="second-stream">
           <h3><span class="schedule-time">14:00</span><a href="speakers/elaine-dias-batista.html">Google Assistant for
             Android developers</a>
           </h3>
@@ -259,17 +250,18 @@
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
-
-        <li class="first-stream">
-          <h3><span class="schedule-time">15:00</span> TBD</h3>
-          <p class="text-sm">Данис Тазединов
-            <small>| EPAM</small>
+        <li class="second-stream">
+          <h3><span class="schedule-time">14:00</span><a href="speakers/anastasiia-voitova.html"> 10 lines of
+            encryption, 1500 lines of key management</a></h3>
+          <p class="text-sm">Anastasiia Voitova
+            <small>| Cossack Labs</small>
           </p>
           <p class="text-sm">50min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-        <li class="second-stream">
+
+        <li class="first-stream">
           <h3><span class="schedule-time">15:00</span><a href="speakers/pavel-strelchenko.html">Фантастические плагины и
             где они обитают</a>
           </h3>
@@ -280,6 +272,16 @@
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">15:00</span> TBD</h3>
+          <p class="text-sm">Данис Тазединов
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
 
       </ul>
 
